[package]
name = "Final"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
solana-sdk = "1.15.2"
serde = "1.0.219"
solana-program = "1.15.2"
bs58 = "0.4"    
solana-client = "1.15.2"
tokio = "1.45.1"
serde_json = "1.0.140"
spl-token = "3.5.0"
spl-associated-token-account = "1.1.1"
base64 = "0.21"